--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "gfm.css": "^1.1.2",
     "highlight.js": "^10.5.0",
     "jsrsasign": "^10.1.5",
+    "jwt-decode": "^3.1.2",
     "katex": "^0.12.0",
     "matrix-js-sdk": "github:matrix-org/matrix-js-sdk#develop",
     "matrix-react-sdk": "github:matrix-org/matrix-react-sdk#develop",
@@ -64,7 +65,10 @@
     "olm": "https://packages.matrix.org/npm/olm/olm-3.2.1.tgz",
     "prop-types": "^15.7.2",
     "react": "^16.14.0",
+    "react-device-detect": "^1.17.0",
     "react-dom": "^16.14.0",
+    "react-phone-number-input": "^3.1.19",
+    "react-verification-code-input": "^1.2.9",
     "sanitize-html": "github:apostrophecms/sanitize-html#3c7f93f2058f696f5359e3e58d464161647226db",
     "ua-parser-js": "^0.7.23"
   },
