--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "matrix-react-sdk": "github:matrix-org/matrix-react-sdk#develop",
     "matrix-widget-api": "^0.1.0-beta.13",
     "olm": "https://packages.matrix.org/npm/olm/olm-3.2.1.tgz",
+    "opus-recorder": "^8.0.3",
     "prop-types": "^15.7.2",
     "react": "^16.14.0",
     "react-device-detect": "^1.17.0",
