added react-responsive-carousel package

--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "browser-request": "^0.3.3",
     "gfm.css": "^1.1.2",
     "highlight.js": "^10.5.0",
+    "install-peerdeps": "^3.0.3",
     "jsrsasign": "^10.1.5",
     "jwt-decode": "^3.1.2",
     "katex": "^0.12.0",
@@ -69,6 +70,7 @@
     "react-device-detect": "^1.17.0",
     "react-dom": "^16.14.0",
     "react-phone-number-input": "^3.1.19",
+    "react-responsive-carousel": "^3.2.18",
     "react-verification-code-input": "^1.2.9",
     "sanitize-html": "github:apostrophecms/sanitize-html#3c7f93f2058f696f5359e3e58d464161647226db",
     "ua-parser-js": "^0.7.23",
