--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "react-phone-number-input": "^3.1.19",
     "react-verification-code-input": "^1.2.9",
     "sanitize-html": "github:apostrophecms/sanitize-html#3c7f93f2058f696f5359e3e58d464161647226db",
+    "swiper": "^6.7.0",
     "ua-parser-js": "^0.7.23",
     "uuid": "^8.3.2"
   },
