--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "opus-recorder": "^8.0.3",
     "prop-types": "^15.7.2",
     "react": "^16.14.0",
+    "react-beautiful-dnd": "^13.1.0",
     "react-device-detect": "^1.17.0",
     "react-dom": "^16.14.0",
     "react-phone-number-input": "^3.1.19",
