--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -1,34 +1,26 @@
-# This is an example Starter pipeline configuration
-# Use a skeleton to build, test and deploy using manual and parallel steps
-# -----
-# You can specify a custom docker image from Docker Hub as your build environment.
-image: atlassian/default-image:2
+image: node:10.15.3
 
 pipelines:
-  default:
-    - parallel:
-      - step:
-          name: 'Build and Test'
-          script:
-            - echo "Your build and test goes here..."
-      - step:
-          name: 'Lint'
-          script:
-            - echo "Your linting goes here..."
-      - step:
-          name: 'Security scan'
-          script:
-            - echo "Your security scan goes here..."
-
-    # The following deployment steps will be executed for each pipeline run. To configure your steps and conditionally deploy see https://support.atlassian.com/bitbucket-cloud/docs/configure-bitbucket-pipelinesyml/
+  default:  
     - step:
-        name: 'Deployment to Staging'
-        deployment: staging
+        name: Production Build App
+        # image: node:latest
         script:
-          - echo "Your deployment to staging script goes here..."
+          - rm -rf package-lock.json
+          - rm -rf node_modules
+          - yarn install 
+          - CI=false yarn run build
+        artifacts:
+          - webapp/**
     - step:
-        name: 'Deployment to Production'
-        deployment: production
-        trigger: 'manual'
+        name: Deploying the app to S3
+        #deployment: Staging
         script:
-          - echo "Your deployment to production script goes here..."
+          - pipe: atlassian/aws-s3-deploy:0.5.0
+            variables:
+              AWS_ACCESS_KEY_ID: $AWS_ACCESS_KEY_ID
+              AWS_SECRET_ACCESS_KEY: $AWS_SECRET_ACCESS_KEY
+              AWS_DEFAULT_REGION: $AWS_DEFAULT_REGION
+              S3_BUCKET: $S3_BUCKET # sumrachat-web
+              ACL: 'public-read'
+              LOCAL_PATH: 'webapp'
